--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,25 @@
 /config/master.key
 
 /vendor/*
+
+.DS_Store
+node_modules
+public
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
