--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "node-sass": "^4.9.3",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17"
   },
