--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-devtools": "^5.0.0-beta.1",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
