--- a/gemfile
+++ b/gemfile
@@ -46,6 +46,9 @@ group :development do
   gem 'factory_bot_rails'
 end
 
+group: :production do
+  gem 'pg'
+end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
